--- a/style.css
+++ b/style.css
@@ -1,3 +1,21 @@
 body{
+    
     background-color: pink;
+    width: 900px;
+    height: 1000px;
+    margin: auto;
+}
+
+div{
+margin-top: 50px;
+margin-bottom: 7px;
+padding-top: 50px;
+padding-bottom: 50px;
+border: black 2px solid;
+
+}
+
+hr{
+    color: black;
+
 }
